maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:11: error: (Int, Int) does not take parameters
  setIndication(sortie(0),sortie(1),0)
                      ^JediEscaper:11: error: (Int, Int) does not take parameters
  setIndication(sortie(0),sortie(1),0)
                                ^